2008-08-03  Tor Lillqvist  <tml@novell.com>

	* win32/gwin32directorymonitor.c
	(g_win32_directory_monitor_callback): Make prototype match
	LPOVERLAPPED_COMPLETION_ROUTINE to avoid warning. Cast
	LPOVERLAPPED parameter to local GWin32DirectoryMonitorPrivate
	pointer.

	(g_win32_directory_monitor_constructor):
	GLocalDirectoryMonitor::dirname is in UTF-8 like all other file
	names in the GLib API on Windows, so convert to UTF-16 and open
	with CreateFileW().

2008-08-03  Tor Lillqvist  <tml@novell.com>

	Bug 541036 - Gnumeric crashes when trying to open Desktop or
	user's folder under Windows

	* win32/gwin32directorymonitor.c
	(g_win32_directory_monitor_constructor): Ignore error from
	CreateFile() when opening directory. Instead of asserting, just
	store INVALID_HANDLE_VALUE then in
	GWin32DirectoryMonitorPrivate::hDirectory. Also ignore error from
	ReadDirectoryChangesW().
	(g_win32_directory_monitor_cancel): Don't attempt to close
	directory handle if it is INVALID_HANDLE_VALUE.

2008-08-01  Matthias Clasen  <mclasen@redhat.com>

	* gdesktopappinfo.c: Remove debug spew

2008-08-01  Hans Breuer  <hans@breuer.org>

	* makefile.msc : add gemblembedicon

2008-07-30  Matthias Clasen  <mclasen@redhat.com>

	Bug 545457 – gdmsetup crashed with SIGSEGV in
	g_unix_mount_guess_should_display()

	* gunixvolumemonitor.c (get_mount_for_mount_path): Don't 
	crash if no mount is found.

2008-07-28  Matthias Clasen  <mclasen@redhat.com>

	Bug 545203 – gfile.c: argument is different type.

	* gfile.c (open_read_async_thread): Pass a GError **
	to g_file_set_error_literal.
	Reported by Kazuki Iwamoto

2008-07-28  Matthias Clasen  <mclasen@redhat.com>

	Bug 545157 – wrong/no list of "open with" applications for .cc and
	.cpp files

	* gdesktopappinfo.c (get_all_desktop_entries_for_mime_type):
	Collect all ancestors, not just direct parents. Pointed
	out by Bastien Nocera

2008-07-28  Matthias Clasen  <mclasen@redhat.com>

	* Makefile.am: Install gemblemedicon.h
